# secret-share

./: Cargo.toml  README.md  build.bat  build.sh
backend/: Cargo.toml  run_server.ps1
backend/src/: errors.rs  main.rs
crypto_part/: Cargo.toml
crypto_part/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: http.rs  main.rs
