[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4"
tracing = "0.1"
redis = {version= "*", features=["tokio-comp", "connection-manager"]}
crypto_part = {path = "../crypto_part"}
base64 = "0.13"
rust-embed = "6.3"
warp-embed = "0.4"
